test/spec_vectors/f32/fail/module_9.wat
(module (func (result f32) (f32.nearest (i64.const 0))))